--- a/component/docs/interfaces/FirebaseUploadImageProps.html
+++ b/component/docs/interfaces/FirebaseUploadImageProps.html
@@ -20,7 +20,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">FirebaseUploadImageProps</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L92">FirebaseUploader.tsx:92</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L92">FirebaseUploader.tsx:92</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -47,29 +47,37 @@
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>button<wbr/>Control</span><a href="#buttonControl" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" id="icon-anchor-a"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5" id="icon-anchor-b"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5" id="icon-anchor-c"></path></svg></a></h3>
 <div class="tsd-signature">button<wbr/>Control<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">any</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L109">FirebaseUploader.tsx:109</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L115">FirebaseUploader.tsx:115</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="checkboxControl" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>checkbox<wbr/>Control</span><a href="#checkboxControl" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">checkbox<wbr/>Control<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">any</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L108">FirebaseUploader.tsx:108</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L114">FirebaseUploader.tsx:114</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="disabled" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>disabled</span><a href="#disabled" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
-<div class="tsd-signature">disabled<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div><aside class="tsd-sources">
+<div class="tsd-signature">disabled<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div>
+<div class="tsd-comment tsd-typography"><p>Set to <code>true</code> to display the control in a disabled state.</p>
+
+<h3>Default Value</h3><p><code>false</code></p>
+</div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L97">FirebaseUploader.tsx:97</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L100">FirebaseUploader.tsx:100</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="firebaseApp" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>firebase<wbr/>App</span><a href="#firebaseApp" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">firebase<wbr/>App<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">FirebaseApp</span></div>
 <div class="tsd-comment tsd-typography"><p>A reference to your Firebase app that was initialised with a call such as <code>firebase.initializeApp(firebaseConfigObj)</code></p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L94">FirebaseUploader.tsx:94</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L94">FirebaseUploader.tsx:94</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="multiple" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>multiple</span><a href="#multiple" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
-<div class="tsd-signature">multiple<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div><aside class="tsd-sources">
+<div class="tsd-signature">multiple<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div>
+<div class="tsd-comment tsd-typography"><p>Set to <code>true</code> to specify the control will accept multiple images.</p>
+
+<h3>Default Value</h3><p><code>false</code>, the control accepts only one image</p>
+</div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L98">FirebaseUploader.tsx:98</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L104">FirebaseUploader.tsx:104</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="options" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>options</span><a href="#options" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">options<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">{ </span><br/><span>    </span>styles<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-symbol">{ </span><br/><span>        </span>imgPreview<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">; </span><br/><span>        </span>imgPreviewLabel<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">; </span><br/><span>        </span>imgPreviewTitle<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">; </span><br/><span>        </span>progressControlWrapper<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span></div>
@@ -88,39 +96,39 @@
 <li class="tsd-parameter">
 <h5><code class="tsd-tag ts-flagOptional">Optional</code> progress<wbr/>Control<wbr/>Wrapper<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">object</span></h5></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L99">FirebaseUploader.tsx:99</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L105">FirebaseUploader.tsx:105</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="progressControl" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>progress<wbr/>Control</span><a href="#progressControl" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">progress<wbr/>Control<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">any</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L107">FirebaseUploader.tsx:107</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L113">FirebaseUploader.tsx:113</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="removeButtonIcon" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>remove<wbr/>Button<wbr/>Icon</span><a href="#removeButtonIcon" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">remove<wbr/>Button<wbr/>Icon<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">any</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L111">FirebaseUploader.tsx:111</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L117">FirebaseUploader.tsx:117</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="storageFolder" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>storage<wbr/>Folder</span><a href="#storageFolder" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">storage<wbr/>Folder<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 <div class="tsd-comment tsd-typography"><p>The target folder in Firebase storage.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L96">FirebaseUploader.tsx:96</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L96">FirebaseUploader.tsx:96</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="uploadButtonIcon" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>upload<wbr/>Button<wbr/>Icon</span><a href="#uploadButtonIcon" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">upload<wbr/>Button<wbr/>Icon<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">any</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L110">FirebaseUploader.tsx:110</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L116">FirebaseUploader.tsx:116</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="uploadCompleteCallback" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>upload<wbr/>Complete<wbr/>Callback</span><a href="#uploadCompleteCallback" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">upload<wbr/>Complete<wbr/>Callback<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">Function</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L113">FirebaseUploader.tsx:113</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L119">FirebaseUploader.tsx:119</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="uploadStartCallback" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>upload<wbr/>Start<wbr/>Callback</span><a href="#uploadStartCallback" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">upload<wbr/>Start<wbr/>Callback<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">Function</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/9ed12f6/component/src/FirebaseUploader.tsx#L112">FirebaseUploader.tsx:112</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/brownieboy/react-firebase-image-upload-control/blob/d4b64c4/component/src/FirebaseUploader.tsx#L118">FirebaseUploader.tsx:118</a></li></ul></aside></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
